--- a/portfolio/journal-de-bord/index.html
+++ b/portfolio/journal-de-bord/index.html
@@ -1,33 +1,32 @@
 <!doctype html>
-<html>
+<html lang="fr">
 <head>
- <meta charset="utf-8">
- <title>Portfolio SIN</title>
- <link rel="stylesheet" href="../assets/style.css"> <!-- Remonte au bon dossier -->
+  <meta charset="utf-8">
+  <title>Journal de bord</title>
+  <link rel="stylesheet" href="../assets/style.css">
 </head>
 <body>
-<h1>Journal de bord</h1>
+  <h1>Journal de bord</h1>
 
-<table border="2">
-  <tr>
-    <th>Date</th>
-    <th>Travail en classe</th>
-    <th>Travail maison</th>
-    <th>Preuves</th>
-  </tr>
-  <tr>
-    <td>09/09</td>
-    <td>1</td>
-    <td>2</td>
-    <td><img src="../img/preuve1.jpg" alt="Exercices rendus" width="100"></td>
-  </tr>
-  <tr>
-    <td>10/09</td>
-    <td>3</td>
-    <td>4</td>
-    <td><img src="../img/preuve2.jpg" alt="preuvee" width="100"></td>
-  </tr>
-</table>
-
+  <table border="2">
+    <tr>
+      <th>Date</th>
+      <th>Travail en classe</th>
+      <th>Travail maison</th>
+      <th>Preuves</th>
+    </tr>
+    <tr>
+      <td>09/09</td>
+      <td>1</td>
+      <td>2</td>
+      <td><img src="../img/preuve1.jpg" alt="Exercices rendus" width="100"></td>
+    </tr>
+    <tr>
+      <td>10/09</td>
+      <td>3</td>
+      <td>4</td>
+      <td><img src="../img/preuve2.jpg" alt="Preuve" width="100"></td>
+    </tr>
+  </table>
 </body>
 </html>
