--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   <h1>Mon Portfolio</h1>
   <p>Bienvenue dans mon classeur virtuel.</p>
 
-  <a href="docs/tp1.pdf">Voir le TP 1</a><br>
-  <a href="img/photo.jpg">Photo</a><br>
-  <a href="journal-de-bord/">Journal de bord</a>
+  <!-- Liens vers les fichiers et dossiers -->
+  <a href="docs/tp1.pdf" target="_blank">Voir le TP 1</a><br>
+  <a href="img/photo.jpg" target="_blank">Photo</a><br>
+  <a href="journal-de-bord/index.html">Journal de bord</a>
 </body>
 </html>
